--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Guillepalooza</title>
   <link rel="stylesheet" href="icons/foundation-icons.css">
   <link rel="stylesheet" href="css/foundation-flex.css">
+  <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet"> 
 <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
@@ -31,7 +32,15 @@
       </div>
     </div>
   </section>
-  
+  <!-- end social section-->
+  <!-- Logo -->
+  <section id="logo-container">
+    <div class="callout text-center">
+      <h1>Guillepalooza</h1>
+    </div>
+  </section>
+  <!-- end Logo -->
+
   <script src="js/vendor/jquery.js"></script>
   <script src="js/vendor/what-input.js"></script>
   <script src="js/vendor/foundation.js"></script>
