Added menu navigator with a dropdown item

--- a/index.html
+++ b/index.html
@@ -40,6 +40,23 @@
     </div>
   </section>
   <!-- end Logo -->
+  <!-- Menu -->
+  <section id="menu-container">
+    <ul class="dropdown menu align-spaced" data-dropdown-menu>
+      <li><a href=""><i class="fi-ticket"></i> Tickets</a></li>
+      <li>
+        <a href=""><i class="fi-calendar"></i> Lineup</a>
+        <ul id="submenu-container" class="menu">
+          <li><a href="#">Friday</a></li>
+          <li><a href="#">Saturday</a></li>
+          <li><a href="#">Monday</a></li>
+        </ul>
+      </li>
+      <li><a href=""><i class="fi-info"></i> Info</a></li>
+      <li><a href=""><i class="fi-flag"></i> Subscribe</a></li>
+    </ul>
+  </section>
+  <!-- end Menu -->
 
   <script src="js/vendor/jquery.js"></script>
   <script src="js/vendor/what-input.js"></script>
