Added the main button's page 'Buy tickets' to attract people

--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
     </ul>
   </section>
   <!-- end Menu -->
+  <!-- Tickets -->
+  <section id="tickets-action">
+    <div class="callout large text-center">
+      <a href="#">
+        <button class="button hollow large">Buy tickets</button>
+      </a>
+    </div>
+  </section>
+  <!-- end Tickets -->
+
 
   <script src="js/vendor/jquery.js"></script>
   <script src="js/vendor/what-input.js"></script>
