Added the tabs navigation functionality for lineup

--- a/index.html
+++ b/index.html
@@ -66,6 +66,27 @@
     </div>
   </section>
   <!-- end Tickets -->
+  <!-- Lineup -->
+  <section id="lineup-container">
+    <h2 class="text-center">Lineup</h2>
+    <ul class="tabs text-center" data-tabs id="lineup-tabs">
+      <li class="tabs-title is-active"><a href="#panel-friday">Friday</a></li>
+      <li class="tabs-title"><a href="#panel-saturday">Saturday</a></li>
+      <li class="tabs-title"><a href="#panel-monday">Monday</a></li>
+    </ul>
+    <div class="tabs-content" data-tabs-content="lineup-tabs">
+      <div class="tabs-panel is-active" id="panel-friday">
+        Content of Friday's panel
+      </div>
+      <div class="tabs-panel" id="panel-saturday">
+        Content of Saturday's panel
+      </div>
+      <div class="tabs-panel" id="panel-monday">
+        Content of Monday's panel
+      </div>
+    </div>
+  </section>
+  <!-- end Lineup -->
 
 
   <script src="js/vendor/jquery.js"></script>
