Lineup is ready with all the days

--- a/index.html
+++ b/index.html
@@ -72,17 +72,200 @@
     <ul class="tabs text-center" data-tabs id="lineup-tabs">
       <li class="tabs-title is-active"><a href="#panel-friday">Friday</a></li>
       <li class="tabs-title"><a href="#panel-saturday">Saturday</a></li>
-      <li class="tabs-title"><a href="#panel-monday">Monday</a></li>
+      <li class="tabs-title "><a href="#panel-monday">Monday</a></li>
     </ul>
     <div class="tabs-content" data-tabs-content="lineup-tabs">
       <div class="tabs-panel is-active" id="panel-friday">
-        Content of Friday's panel
+        <div class="row">
+          <div class="column small-12 medium-6">
+            <div class="orbit" data-orbit>
+              <ul class="slides-container">
+                <li class="orbit-slide is-active">
+                  <img class="orbit-image" src="drake.jpg" alt="Drake">
+                  <figcaption class="orbit-caption">Drake</figcaption>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="column small-12 medium-6">
+            <div class="orbit" data-orbit>
+              <ul class="slides-container">
+                <li class="orbit-slide is-active">
+                  <img class="orbit-image" src="drake.jpg" alt="Drake">
+                  <figcaption class="orbit-caption">Drake</figcaption>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="column small-12 medium-6">
+            <div class="orbit" data-orbit>
+              <ul class="slides-container">
+                <li class="orbit-slide is-active">
+                  <img class="orbit-image" src="drake.jpg" alt="Drake">
+                  <figcaption class="orbit-caption">Drake</figcaption>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="column small-12 medium-6">
+            <div class="orbit" data-orbit>
+              <ul class="slides-container">
+                <li class="orbit-slide is-active">
+                  <img class="orbit-image" src="drake.jpg" alt="Drake">
+                  <figcaption class="orbit-caption">Drake</figcaption>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="column small-12 medium-6">
+            <div class="orbit" data-orbit>
+              <ul class="slides-container">
+                <li class="orbit-slide is-active">
+                  <img class="orbit-image" src="drake.jpg" alt="Drake">
+                  <figcaption class="orbit-caption">Drake</figcaption>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="column small-12 medium-6">
+            <div class="orbit" data-orbit>
+              <ul class="slides-container">
+                <li class="orbit-slide is-active">
+                  <img class="orbit-image" src="drake.jpg" alt="Drake">
+                  <figcaption class="orbit-caption">Drake</figcaption>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="tabs-panel" id="panel-saturday">
-        Content of Saturday's panel
+        <div class="row">
+          <div class="column small-12 medium-6">
+            <div class="orbit" data-orbit>
+              <ul class="slides-container">
+                <li class="orbit-slide is-active">
+                  <img class="orbit-image" src="dreadmari.jpg" alt="Dread Mar I">
+                  <figcaption class="orbit-caption">Dread Mar I</figcaption>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="column small-12 medium-6">
+            <div class="orbit" data-orbit>
+              <ul class="slides-container">
+                <li class="orbit-slide is-active">
+                  <img class="orbit-image" src="dreadmari.jpg" alt="Dread Mar I">
+                  <figcaption class="orbit-caption">Dread Mar I</figcaption>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="column small-12 medium-6">
+            <div class="orbit" data-orbit>
+              <ul class="slides-container">
+                <li class="orbit-slide is-active">
+                  <img class="orbit-image" src="dreadmari.jpg" alt="Dread Mar I">
+                  <figcaption class="orbit-caption">Dread Mar I</figcaption>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="column small-12 medium-6">
+            <div class="orbit" data-orbit>
+              <ul class="slides-container">
+                <li class="orbit-slide is-active">
+                  <img class="orbit-image" src="dreadmari.jpg" alt="Dread Mar I">
+                  <figcaption class="orbit-caption">Dread Mar I</figcaption>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="column small-12 medium-6">
+            <div class="orbit" data-orbit>
+              <ul class="slides-container">
+                <li class="orbit-slide is-active">
+                  <img class="orbit-image" src="dreadmari.jpg" alt="Dread Mar I">
+                  <figcaption class="orbit-caption">Dread Mar I</figcaption>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="column small-12 medium-6">
+            <div class="orbit" data-orbit>
+              <ul class="slides-container">
+                <li class="orbit-slide is-active">
+                  <img class="orbit-image" src="dreadmari.jpg" alt="Dread Mar I">
+                  <figcaption class="orbit-caption">Dread Mar I</figcaption>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="tabs-panel" id="panel-monday">
-        Content of Monday's panel
+        <div class="row">
+          <div class="column small-12 medium-6">
+            <div class="orbit" data-orbit>
+              <ul class="slides-container">
+                <li class="orbit-slide is-active">
+                  <img class="orbit-image" src="edsheeran.jpg" alt="Ed Sheeran">
+                  <figcaption class="orbit-caption">Ed Sheeran</figcaption>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="column small-12 medium-6">
+            <div class="orbit" data-orbit>
+              <ul class="slides-container">
+                <li class="orbit-slide is-active">
+                  <img class="orbit-image" src="edsheeran.jpg" alt="Ed Sheeran">
+                  <figcaption class="orbit-caption">Ed Sheeran</figcaption>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="column small-12 medium-6">
+            <div class="orbit" data-orbit>
+              <ul class="slides-container">
+                <li class="orbit-slide is-active">
+                  <img class="orbit-image" src="edsheeran.jpg" alt="Ed Sheeran">
+                  <figcaption class="orbit-caption">Ed Sheeran</figcaption>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="column small-12 medium-6">
+            <div class="orbit" data-orbit>
+              <ul class="slides-container">
+                <li class="orbit-slide is-active">
+                  <img class="orbit-image" src="edsheeran.jpg" alt="Ed Sheeran">
+                  <figcaption class="orbit-caption">Ed Sheeran</figcaption>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="column small-12 medium-6">
+            <div class="orbit" data-orbit>
+              <ul class="slides-container">
+                <li class="orbit-slide is-active">
+                  <img class="orbit-image" src="edsheeran.jpg" alt="Ed Sheeran">
+                  <figcaption class="orbit-caption">Ed Sheeran</figcaption>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="column small-12 medium-6">
+            <div class="orbit" data-orbit>
+              <ul class="slides-container">
+                <li class="orbit-slide is-active">
+                  <img class="orbit-image" src="edsheeran.jpg" alt="Ed Sheeran">
+                  <figcaption class="orbit-caption">Ed Sheeran</figcaption>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
