Added the pricing table to the main page and its styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Guillepalooza</title>
   <link rel="stylesheet" href="icons/foundation-icons.css">
   <link rel="stylesheet" href="css/foundation-flex.css">
-  <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet"> 
+  <link rel="stylesheet" href="css/pricing-table.css">
+  <link href="https://fonts.googleapis.com/css?family=Courgette|Acme" rel="stylesheet">
 <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
@@ -270,7 +271,46 @@
     </div>
   </section>
   <!-- end Lineup -->
-
+  <!-- Pricing table -->
+  <section id="tickets-container">
+    <h2 class="text-center">Buy your tickets</h2>
+    <div class="row">
+      <div class="column small-10 medium-6 medium-offset-3 small-offset-1">
+        <ul class="pricing-table no-bullet text-center">
+          <li class="title">Platinum</li>
+          <li class="price">$120</li>
+          <li class="description">Friday, Saturday and Monday access</li>
+          <li>2 drinks everyday</li>
+          <li>Parking lot included everyday</li>
+          <li>Participate in a draw to access into backstage</li>
+          <li><a class="button" href="#">Buy Platinum</a></li>
+        </ul>
+      </div>
+      <div class="column small-6 medium-4 medium-offset-2">
+        <ul class="pricing-table no-bullet text-center">
+          <li class="title">Gold</li>
+          <li class="price">$90</li>
+          <li class="description">Friday, Saturday and Monday access</li>
+          <li>You can buy one drink everyday</li>
+          <li>-</li>
+          <li>-</li>
+          <li><a class="button" href="#">Buy Platinum</a></li>
+        </ul>
+      </div>
+      <div class="column small-6 medium-4">
+        <ul class="pricing-table no-bullet text-center">
+          <li class="title">Silver</li>
+          <li class="price">$65</li>
+          <li class="description">Friday, Saturday and Monday access</li>
+          <li>-</li>
+          <li>-</li>
+          <li>-</li>
+          <li><a class="button" href="#">Buy Platinum</a></li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <!-- end Pricing table -->
 
   <script src="js/vendor/jquery.js"></script>
   <script src="js/vendor/what-input.js"></script>
