Pricing table views are finished with equalizer

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
   <!-- Pricing table -->
   <section id="tickets-container">
     <h2 class="text-center">Buy your tickets</h2>
-    <div class="row">
+    <div class="row" data-equalizer data-equalize-on="small">
       <div class="column small-10 medium-6 medium-offset-3 small-offset-1">
         <ul class="pricing-table no-bullet text-center">
           <li class="title">Platinum</li>
@@ -291,7 +291,7 @@
           <li class="title">Gold</li>
           <li class="price">$90</li>
           <li class="description">Friday, Saturday and Monday access</li>
-          <li>You can buy one drink everyday</li>
+          <li data-equalizer-watch>You can include drink everyday, everywhere</li>
           <li>-</li>
           <li>-</li>
           <li><a class="button" href="#">Buy Platinum</a></li>
@@ -302,7 +302,7 @@
           <li class="title">Silver</li>
           <li class="price">$65</li>
           <li class="description">Friday, Saturday and Monday access</li>
-          <li>-</li>
+          <li data-equalizer-watch>-</li>
           <li>-</li>
           <li>-</li>
           <li><a class="button" href="#">Buy Platinum</a></li>
