--- a/index.html
+++ b/index.html
@@ -311,6 +311,26 @@
     </div>
   </section>
   <!-- end Pricing table -->
+  <!-- Subscribe -->
+  <section class="subscribe-container">
+    <h3 class="text-center">Subscribe</h3>
+    <h4 class="text-center"><small>And recibe the latest concert news</small></h4>
+    <form action="" method="GET" novalidate data-abide>
+      <div class="row columns small-12 medium-6 text-center error-container" style="display: none;" data-abide-error>
+        <p><i class="fi-alert"></i> You entered an invalid email. Please, verify it</p>
+      </div>
+      <div class="row columns small-12 medium-6">
+        <div class="input-group">
+          <span class="input-group-label"><i class="fi-mail"></i></span>
+          <input type="email" name="email" class="input-group-field" placeholder="you@email.com" required>
+          <div class="input-group-button">
+            <input type="submit" class="button" value="Subscribe">
+          </div>
+        </div>
+      </div>
+    </form>
+  </section>
+  <!-- end Subscribe -->
   <!-- Info section -->
   <section id="info-container">
     <h3 class="text-center">Information</h3>
